--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ group = project.maven_group
 minecraft {
 }
 
+repositories {
+	maven { url "http://tehnut.info/maven" }
+    maven { url "https://minecraft.curseforge.com/api/maven" }
+}
+
 dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -21,6 +26,17 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modCompile "net.fabricmc:fabric:${project.fabric_version}"
+
+	// ModMenu
+	modCompile "modmenu:ModMenu:${project.modmenu_version}"
+
+	// REI
+	modCompile "cloth:ClothEvents:${project.cloth_events_version}"
+    modCompile "cloth-config:ClothConfig:${project.cloth_config_version}"
+    modCompile "roughly-enough-items:RoughlyEnoughItems:${project.rei_version}"
+
+	// HWYLA
+	modCompile "mcp.mobius.waila:Hwyla:${project.hwyla_version}"
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
