--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,22 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.14
-	yarn_mappings=1.14+build.1
-	loader_version=0.4.2+build.132
+	yarn_mappings=1.14+build.7
+	loader_version=0.4.2+build.141
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 0.1.0
 	maven_group = net.huaum
 	archives_base_name = diplomacy
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
 	fabric_version=0.2.7+build.127
+
+	modmenu_version=release
+
+	cloth_events_version=0.3.1.23
+	cloth_config_version=0.2.1.14
+	rei_version=2.8.1.101
+
+	hwyla_version=1.14-1.9.16-60
